--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@sveltejs/svelte-subdivide": "^2.1.0",
     "@sveltejs/svelte-virtual-list": "^2.1.2",
     "chokidar": "^2.0.3",
+    "codemirror": "^5.39.0",
     "cross-env": "^5.1.6",
     "default-shell": "^1.0.1",
     "degit": "^2.1.3",
