--- a/package.json
+++ b/package.json
@@ -21,12 +21,19 @@
   "devDependencies": {
     "electron": "^2.0.0",
     "electron-builder": "^20.13.4",
+    "eslint": "^5.1.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "rollup": "^0.59.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-svelte": "^4.1.0",
     "rollup-plugin-typescript": "^0.8.1",
+    "semistandard": "^12.0.1",
     "svelte": "^2.6.5",
     "tslib": "^1.9.1",
     "typescript": "^2.8.3"
