--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "chokidar": "^2.0.3",
     "codemirror": "^5.39.0",
     "cross-env": "^5.1.6",
+    "d3-hierarchy": "^1.1.6",
+    "d3-shape": "^1.2.0",
     "default-shell": "^1.0.1",
     "degit": "^2.1.3",
     "just-debounce": "^1.0.0",
