--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "pg-native": "^3.0.0",
     "pretty-ms": "^3.1.0",
     "require-relative": "^0.8.7",
+    "short-unique-id": "^1.1.1",
     "sqlite3": "^4.0.1",
     "stylus": "^0.54.5",
     "svelte-extras": "^2.0.2",
