--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "default-shell": "^1.0.1",
     "degit": "^2.1.3",
     "just-debounce": "^1.0.0",
+    "kleur": "^3.0.1",
     "mapbox-gl": "^0.52.0",
     "monaco-editor": "^0.13.1",
     "node-pty": "^0.7.4",
     "pg": "^7.4.3",
     "pg-native": "^3.0.0",
+    "polka": "^0.5.1",
     "pretty-ms": "^3.1.0",
     "require-relative": "^0.8.7",
     "short-unique-id": "^1.1.1",
